# elonef-comunication

./: .gitignore  .gitmodules  LICENSE  README.md  crypto_browser_types_fixer.py  make_client.sh  make_package.sh  package.json  rollup.config.mjs  tsconfig.json
.github/workflows/: clean.yml  cppDevBuild.yml  devbuild.yml  generate_doc.yml  publish.yml
cpp/: CMakeLists.txt  client.cpp  echo_client.cpp  echo_server.cpp  elonef-communication.cpp  install_libs.sh  main.cpp  server.cpp
cpp/include/elonef-communication/: cache.hpp  cache_data.hpp  data_waiter.hpp  error.hpp  hashing.hpp  print.hpp  sliding_time_window.hpp  types.hpp  utils.hpp
cpp/include/elonef-communication/encoding/: decoding.hpp  encoding.hpp  message.hpp  uuid.hpp
cpp/include/elonef-communication/encryption/: aes.hpp  rsa.hpp  sign.hpp
cpp/include/elonef-communication/handlers/: clientConnectionHandler.hpp  connectionHandler.hpp  messageHandler.hpp  serverConnectionHandler.hpp
cpp/include/elonef-communication/handlers/client_data/: client_auth_data.hpp  client_connection_data.hpp
cpp/include/elonef-communication/handlers/data/: client_auth_data.hpp  client_connection_data.hpp  connection_data.hpp
cpp/include/elonef-communication/handlers/return_handlers/: callback_return_handler.hpp  promise_return_handler.hpp  return_handler.hpp
cpp/include/elonef-communication/keys/: genKeys.hpp  load_keys.hpp
cpp/src/: print  sliding_time_window.cpp  utils.cpp
cpp/src/encoding/: decoding.cpp  encoding.cpp  message.cpp  uuid.cpp
cpp/src/encryption/: aes.cpp  rsa.cpp  sign.cpp
cpp/src/handlers/: clientConnectionHandler.cpp  connectionHandler.cpp  serverConnectionHandler.cpp
cpp/src/handlers/client_data/: client_auth_data.cpp  client_connection_data.cpp
cpp/src/handlers/data/: client_auth_data.cpp  client_connection_data.cpp
cpp/src/keys/: genKeys.cpp  load_keys.cpp
cpp/test/: main_test.cpp  run_test.hpp  test_aes.cpp  test_ecdsa.cpp  test_encoding.cpp  test_erros.cpp  test_rsa.cpp
cpp/test/test_utils/: test.cpp  test.hpp
node/: make_client.sh  package.json
node/src/: erros.ts
node/src/encoding/: bufferReader.ts  index.ts
node/src/encription/: index.ts  sign.ts
node/src/keys/: genKeys.ts  index.ts
src/: erros.ts  index.ts  types.ts  utility.ts
src/encoding/: bufferReader.ts  index.ts  uuid.ts
src/encription/: aes.ts  index.ts  rsa.ts  sign.ts
src/handlers/: clientConnectionHandler.ts  connectionHandler.ts  index.ts  serverConnectionHandler.ts
src/keys/: build_ecdh.ts  genKeys.ts  index.ts  load_keys.ts
test/: aes.test.js  clientTest.js  rsa.test.js  serverClientEncription.test.js  serverTest.js
